--- a/MinecraftServerPage/index.html
+++ b/MinecraftServerPage/index.html
@@ -9,8 +9,8 @@
 <body>
     <div id="slider-container">
         <div class="slider">
-            <img src="/images/titleCard.jpg" alt="Image 1">
-            <img src="/images/bees.jpg" alt="Image 2">
+            <img src="/images/titleCard.jpg" alt="dummyImag1">
+            <img src="/images/bees.jpg" alt="dummyImage2">
             <!-- Add more images as needed -->
         </div>
         <button id="prevBtn">Previous</button>
