--- a/MinecraftServerPage/index.html
+++ b/MinecraftServerPage/index.html
@@ -16,6 +16,7 @@
         <button id="prevBtn">Previous</button>
         <button id="nextBtn">Next</button>
     </div>
-    <script src="script.js"></script> <!--where scrolling happens-->
+    <script src="/MinecraftServerPage/script.js"></script> <!--where scrolling happens-->
 </body>
+    <h1>Welcome to <br> Camp!</h1>
 </html>
