--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="slider">
             <img src="/images/titleCard.jpg" alt="dummyImag1">
             <img src="/images/bees.jpg" alt="dummyImage2">
+            <img src="/images/AboveDisneySprings.png" alt="dummyImage3">
             
         </div>
         <button id="prevBtn">Previous</button>
