--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
     </div>
     <script src="/MinecraftServerPage/script.js"></script> <!--where scrolling happens-->
 </body>
-    <h1>Welcome to <br> Camp!</h1>
+    <h1 class="welcomeSign">Welcome to <br> Camp!</h1>
 </html>
