--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Image Slider</title>
 </head>
     <body>
@@ -21,7 +21,7 @@
 
         <h1 class="welcomeSign">Welcome to <br> Camp!</h1>
 
-        
+
     </body>
 
 </html>
