--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button id="prevBtn">Previous</button>
             <button id="nextBtn">Next</button>
         </div>
-        <script src="/script.js"></script> <!--where scrolling happens-->
+        <script src="script.js"></script> <!--where scrolling happens-->
 
         <h1 class="welcomeSign">Welcome to <br> Camp!</h1>
 
