--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/style.css">
     <title>Image Slider</title>
 </head>
+<header>Permissions-Policy: interest-cohort=()</header>
     <body>
         <div id="slider-container">
             <div class="slider">
