correcting image paths

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <div id="slider-container">
             <div class="slider">
-                <img src="/images/titleCard.jpg" alt="dummyImag1">
-                <img src="/images/bees.jpg" alt="dummyImage2">
+                <img src="images/titleCard.jpg" alt="dummyImag1">
+                <img src="images/bees.jpg" alt="dummyImage2">
 
                 
             </div>
