--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>CampMC</title>
+    <title>CampMC</title><!--https://emmaamos.github.io/MinecraftServerPage/-->
 </head>
     <body>
         <div id="slider-container">
             <div class="slider">
                 <img src="images/titleCard.jpg" alt="dummyImag1">
-                <img src="images/bees.jpg" alt="dummyImage2">
-                <img src="images/AboveDisneySprings.png" alt="dummyImage3">
-                
             </div>
+            <div id="slider-container">
+                <div class="slider">
+                    <img src="images/bees.jpg" alt="dummyImage2">>
+                </div>
+                <div class="slider">
+                    <img src="images/AboveDisneySprings.png" alt="dummyImage3">
+                </div>
+
+
             <button id="prevBtn">Previous</button>
             <button id="nextBtn">Next</button>
         </div>
