--- a/index.html
+++ b/index.html
@@ -10,16 +10,9 @@
         <div id="slider-container">
             <div class="slider">
                 <img src="images/titleCard.jpg" alt="dummyImag1">
+                <img src="images/bees.jpg" alt="dummyImage2">
+                <img src="images/AboveDisneySprings.png" alt="dummyImage3">
             </div>
-            <div id="slider-container">
-                <div class="slider">
-                    <img src="images/bees.jpg" alt="dummyImage2">>
-                </div>
-                <div class="slider">
-                    <img src="images/AboveDisneySprings.png" alt="dummyImage3">
-                </div>
-
-
             <button id="prevBtn">Previous</button>
             <button id="nextBtn">Next</button>
         </div>
