got things working

--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <title>CampMC</title><!--https://emmaamos.github.io/MinecraftServerPage/-->
+    <title>CampMC</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>    
 </head>
-    <body>
-        <div id="slider-container">
-            <div class="slider">
-                <img src="images/titleCard.jpg" alt="dummyImag1">
-                <img src="images/bees.jpg" alt="dummyImage2">
-                <img src="images/AboveDisneySprings.png" alt="dummyImage3">
-            </div>
-            <button id="prevBtn">Previous</button>
-            <button id="nextBtn">Next</button>
-        </div>
-        <script src="script.js"></script> <!--where scrolling happens-->
+<body>
+    <div clas>
 
-        <h1 class="welcomeSign">Welcome to <br> Camp!</h1>
+    </div>
+    <img src="" id="current" alt="" />
+    <ul class="slider">
+        <li><img src="images/AboveDisneySprings.png" alt="" /></li>
+        <li><img src="images/bees.jpg" alt="" /></li>
+        <li><img src="images/titleCard.jpg" alt="" /></li>
+    </ul>
 
-
-    </body>
-
+    <script src="script.js"></script>
+</body>
 </html>
