--- a/index.html
+++ b/index.html
@@ -8,16 +8,32 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>    
 </head>
 <body>
-    <div clas>
+    <div class="container">
+        <span >
+                <div class="scrapBook">
+                    <h1>Camp Memories!</h1>
+                    <img class="sliderTop" src="" id="current" alt="" />
+                    <ul class="slider">
+                        <li><img src="images/AboveDisneySprings.png" alt="" /></li>
+                        <li><img src="images/bees.jpg" alt="" /></li>
+                        <li><img src="images/titleCard.jpg" alt="" /></li>
+                    </ul>
+                </div>        
+            </span>
 
+            <span >
+                <div class="Pictures">
+                    <h2>Activites</h2>
+                    <img class="sliderBottum" src="" id="current" alt="" />
+                    <ul class="slider">
+                        <li><img src="images/AboveDisneySprings.png" alt="" /></li>
+                        <li><img src="images/bees.jpg" alt="" /></li>
+                        <li><img src="images/titleCard.jpg" alt="" /></li>
+                    </ul>
+                </div>        
+            </span>
     </div>
-    <img src="" id="current" alt="" />
-    <ul class="slider">
-        <li><img src="images/AboveDisneySprings.png" alt="" /></li>
-        <li><img src="images/bees.jpg" alt="" /></li>
-        <li><img src="images/titleCard.jpg" alt="" /></li>
-    </ul>
-
+    
     <script src="script.js"></script>
 </body>
 </html>
