added more pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>    
 </head>
 <body>
-    <div class="container">
+    <nav>
+        <ul>
+            <li>
+                <link rel="home" href="index.html">
+            </li>
+            <li>
+                <link rel="activities" href="">
+            </li>
+            <li>
+                <link rel="" href="">
+            </li>
+            <li>
+                <link rel="Comments" href="">
+            </li>
+        </ul>
+    </nav>
         <span >
                 <div class="scrapBook">
                     <h1>Camp Memories!</h1>
@@ -20,19 +35,6 @@
                     </ul>
                 </div>        
             </span>
-
-            <span >
-                <div class="Pictures">
-                    <h2>Activites</h2>
-                    <img class="sliderBottum" src="" id="current" alt="" />
-                    <ul class="slider">
-                        <li><img src="images/AboveDisneySprings.png" alt="" /></li>
-                        <li><img src="images/bees.jpg" alt="" /></li>
-                        <li><img src="images/titleCard.jpg" alt="" /></li>
-                    </ul>
-                </div>        
-            </span>
-    </div>
     
     <script src="script.js"></script>
 </body>
