--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
                 <link rel="home" href="index.html">
             </li>
             <li>
-                <link rel="activities" href="">
+                <link rel="activities" href="activities/ativities.html">
             </li>
             <li>
-                <link rel="" href="">
-            </li>
-            <li>
-                <link rel="Comments" href="">
+                <link rel="comments" href="comments/comments.html">
             </li>
         </ul>
     </nav>
