--- a/activities/ativities.html
+++ b/activities/ativities.html
@@ -7,6 +7,10 @@
     <title>Camp Activities</title>
 </head>
     <body>
+        <nav>
+            <a href="activities/ativities.html"><img src="" alt=""></a>
+            <a href="comments/comments.html"><img src="" alt=""></a>
+        </nav>
         
     </body>
 </html>
