--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <nav>
-        
+        <a href="activities/ativities.html"><img src="" alt=""></a>
+        <a href="comments/comments.html"><img src="" alt=""></a>
     </nav>
         <span >
                 <div class="scrapBook">
