--- a/comments/comments.html
+++ b/comments/comments.html
@@ -7,6 +7,9 @@
     <title>Camp Bulletin</title>
 </head>
     <body>
-        
+        <nav>
+            <a href="activities/ativities.html"><img src="" alt=""></a>
+            <a href="comments/comments.html"><img src="" alt=""></a>
+        </nav>
     </body>
 </html>
