adding to sub htmls

--- a/activities/ativities.html
+++ b/activities/ativities.html
@@ -11,6 +11,12 @@
             <a href="activities/ativities.html"><img src="" alt=""></a>
             <a href="comments/comments.html"><img src="" alt=""></a>
         </nav>
+        <div class="GroupGames">
+
+        </div>
+        <div class="NatureHike">
+
+        </div>
         
     </body>
 </html>
