added more to nav

--- a/comments/comments.html
+++ b/comments/comments.html
@@ -8,8 +8,9 @@
 </head>
     <body>
         <nav>
-            <a href="activities/ativities.html"><img src="" alt=""></a>
-            <a href="comments/comments.html"><img src="" alt=""></a>
+            <a href="/index.html"><img src="" alt="home"></a>
+            <a href="activities/ativities.html"><img src="" alt="activities"></a>
+            <a href="comments/comments.html"><img src="" alt="cooments"></a>
         </nav>
 
 
