--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <nav>
-        <a href="activities/ativities.html"><img src="" alt=""></a>
-        <a href="comments/comments.html"><img src="" alt=""></a>
+        <ul>
+            <li><a href="#"><img src="" alt="home"></a></li>
+            <li><a href="activities/ativities.html"><img src="" alt="activities"></a></li>
+            <li><a href="comments/comments.html"><img src="" alt="cooments"></a> </li>
+        </ul>                
     </nav>
         <span >
                 <div class="scrapBook">
