working with nav bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#"><img src="" alt="home"></a></li>
+            <li><a href="#"><img src="images/homeButton.png" alt="home"></a></li>
             <li><a href="activities/ativities.html"><img src="" alt="activities"></a></li>
             <li><a href="comments/comments.html"><img src="" alt="cooments"></a> </li>
         </ul>                
